# boncafe-petproject

./: .gitignore  .vercelignore  BACKEND-LOCALIZATION-SUMMARY.md  Procfile  REVIEW-BACKEND-INTEGRATION-COMPLETE.md  VERCEL_DEPLOY.md  backup_menu_data.py  beverages_backup.json  create_translations.py  db.sqlite3  download_main.py  manage.py  manage_wrapper.sh  menu_items_backup.json  requirements.txt  restore_menu_data.py  test_review_backend_integration.py  vercel-build.sh  vercel.json
BonCafe/: asgi.py  settings.py  urls.py  wsgi.py
api/: asgi.py  pyproject.toml
frontend/: .env.example  .env.local  CLEAN-MENU-FINAL.md  COMPLETE-PROJECT-SUMMARY.md  ENHANCED-MENU-REDESIGN.md  FINAL-ERROR-ELIMINATION.md  FINAL-ERROR-SOLUTION.md  FINAL-FIXES-SUMMARY.md  FINAL-HOT-RELOAD-FIX.md  HOT-RELOAD-AND-GRID-FIX.md  INLINE-PRICE-SUMMARY.md  LOCALIZATION-IMPLEMENTATION-SUMMARY.md  LOCALIZATION.md  MENU-UX-IMPROVEMENTS.md  MOBILE-OPTIMIZATION-COMPLETE.md  MOBILE-SCROLLING-FIX-COMPLETE.md  NAVBAR-FIXES-SUMMARY.md  NEWSLETTER-REMOVAL-COMPLETE.md  PERFORMANCE-OPTIMIZATION-COMPLETE.md  PLACEHOLDER-URLS-FIXED.md  PROFESSIONAL-ECOMMERCE-MENU.md  PROFESSIONAL-MENU-REDESIGN.md  REAL-PHOTOS-HOME-PAGE-COMPLETE.md  RESPONSIVE-LANGUAGE-SWITCHER-SUMMARY.md  REVIEW-SUBMISSION-FEATURE-COMPLETE.md  RUNTIME-ERRORS-ELIMINATED.md  RUNTIME-ERRORS-FIXED.md  SCROLL-INTERRUPTION-FIX-COMPLETE.md  UX-UI-IMPROVEMENTS-SUMMARY.md  clean-menu-test.js  clear-errors-fix.md  clear-runtime-errors.js  cypress.config.js  ecommerce-menu-test.js  enhanced-menu-test.js  error-fix-test.js  final-fixes-test.js  (+25 more)
(+105 files in other folders)
